--- a/.github/workflows/.cd.yml
+++ b/.github/workflows/.cd.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Deploy to AWS
         run: |
-          aws configure set aws_access_key_id ${{ var.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ var.AWS_SECRET_ACCESS_KEY }}
-          aws configure set region ${{ var.AWS_REGION }}
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set region ${{ secrets.AWS_REGION }}
