--- a/.github/workflows/.cd.yml
+++ b/.github/workflows/.cd.yml
@@ -26,7 +26,8 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          cd /home/node/NodeDeployment
+          cd /home/node
+          git clone https://github.com/yourusername/yourrepository.git
           git pull
           npm install
           # Add any additional deployment steps (e.g., restarting the Node.js app)
